fix too much strech of icons on destkop

--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -44,12 +44,17 @@ li {
 		gap: 1rem;
 
 		& li {
-			padding: 0.75rem;
 			border-radius: 10px;
 			display: flex;
 			align-items: center;
 			justify-content: center;
+			width: 48px;
+			height: 48px;
 		}
+	}
+
+	&-item {
+		padding: 0.75rem;
 	}
 
 	@include media(medium) {
